fixing overflow isseus

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@ body {
   margin: 0 auto;
   overflow-x: hidden;
   height: 100%;
+  -webkit-overflow-scrolling: auto;
 }
 /*   HEADER*/
 header > * {
